fixed button layout on mobile view size

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -396,7 +396,19 @@ transform: rotate(30deg);
 }
 .moving-text{
    
-    margin-top: 17%
+    margin-top: 22%
+}
+
+.review-container{
+    padding-left:10px;
+    margin-left: 20px !important;
+    width: 90%;
+}
+
+.bag-buttons{
+    margin-left: 0 !important;
+   font-size: 14px;
+   padding:4px;
 }
 
 .quantity-control{
